crates/deities/src/snapshots/deities__goblinoid__tests__bugbear_deities.snap
---
source: deities/src/goblinoid.rs
expression: "Bugbear::deities()"

---
- name: Hruggek
  titles:
    - god of violence
  alignment:
    - Chaotic
    - Evil
  domains:
    - War
  symbols:
    - Morningstar

