crates/deities/src/snapshots/deities__goblinoid__tests__goblin_deities.snap
---
source: deities/src/goblinoid.rs
expression: "Goblin::deities()"

---
- name: Maglubiyet
  titles:
    - god of war
  alignment:
    - Lawful
    - Evil
  domains:
    - War
  symbols:
    - Bloody axe

